--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>groupId</groupId>
     <artifactId>SpringTrain</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.2.5.RELEASE</version>
+        </dependency>
+    </dependencies>
 
-    
+
 </project>
